# Formicarium-Virtuals-Ethereum

./: .gitignore  README.md  vercel.json  wallet_data.txt
agents/: .gitignore  README.md  agent_metadata_design.json  img2stl.py  pyproject.toml  requirements.txt  stl2img.py  test.py
agents/agent_ai/: agent.py  blockchain_tools.py  config.py  erc8004_tools.py  keychain_design_tools.py  prompts.py
agents/api/: agent_controller.py  main.py  media_controller.py  routes.py
agents/examples-agents/python/: chatbot-server.py  pyproject.toml
agents/examples-agents/typescript/: tsconfig.json
agents/examples/python/: README.md  chatbot.py  pyproject.toml
agents/examples/typescript/: README.md  package.json
agents/examples_agents/python/: .env.example  Makefile  README.md  chatbot-server.py  chatbot.py
agents/examples_agents/typescript/: README.md  chatbot.ts  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
blockchain/: .env  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
blockchain/cache/: console-history.txt  solidity-files-cache.json
blockchain/contracts/: ERC20Mock.sol  Formicarium.sol  formicarium.sol
blockchain/scripts/: completeOrder.js  createOrders.js  executeOrder.js  fundAccount.js  getYourOrders.js  mint.js  registerAgentERC8004.js  registerPrinter.js  signOrders.js  submitFeedbackERC8004.js
blockchain/test/: ERC8004.test.js  Formicarium.js  Test.ts  (+2 more)
design/: READMe.md
frontend/: README.md
hardware/: .env  2.gcode  README.md  agent_metadata_hardware.json  test.gco  test.gcode
idea/: README.md
(+85 files in other folders)
